# sudoku

./: Cover.hs  LICENSE  Main.hs  Makefile  Sudoku.hs  easy.txt  hard.txt  run  sudoku.cabal  sudoku.txt
Cover/: Dlx.hs  FastPure.hs  Types.hs
Sudoku/: Cover.hs  Internal.hs  Simple.hs
