-- The name of the package.
Name:                sudoku

-- The package version. See the Haskell package versioning policy
-- (http://www.haskell.org/haskellwiki/Package_versioning_policy) for
-- standards guiding when and how versions should be incremented.
Version:             0.1

-- A short (one-line) description of the package.
Synopsis:            Various Sudoku solvers

-- A longer description of the package.
-- Description:

-- The license under which the package is released.
License:             BSD3

-- The file containing the license text.
License-file:        LICENSE

-- The package author(s).
Author:              David Brown <haskell@davidb.org>

-- An email address to which users can send suggestions, bug reports,
-- and patches.
Maintainer:          David Brown <haskell@davidb.org>

-- A copyright notice.
-- Copyright:

Category:            Math

Build-type:          Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.2


Executable sudoku
  -- .hs or .lhs file containing the Main module.
  Main-is:    Main.hs

  -- Packages needed in order to build this package.
  Build-depends:
    base >= 4.0 && < 5.0,
    array >= 0.3 && < 0.4

  ghc-options: -Wall -rtsopts

  -- Modules not exported by this package.
  -- Other-modules:

  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:

